1_0_0 / feature-05-search-scoring.md and feature-06-background-maintenance.md : implementation.